force-app/main/default/objects/RealEstate__c/fields/Penalty3Cost__c.field-meta.xml
<CustomField>
    <fullName>Penalty3Cost__c</fullName>
    <label>違約金3_費用</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>