force-app/main/default/objects/RealEstate__c/fields/Penalty3StartDate__c.field-meta.xml
<CustomField>
    <fullName>Penalty3StartDate__c</fullName>
    <label>違約金3_期間始まり</label>
    <type>Date</type>
</CustomField>