force-app/main/default/objects/RealEstate__c/fields/PenaltyNum__c.field-meta.xml
<CustomField>
    <fullName>PenaltyNum__c</fullName>
    <label>違約金数値</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>