force-app/main/default/objects/RealEstate__c/fields/PenaltyStandard3__c.field-meta.xml
<CustomField>
    <fullName>PenaltyStandard3__c</fullName>
    <label>違約金基準３</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>契約書</fullName>
            </value>
            <value>
                <fullName>重要事項説明書</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>