force-app/main/default/objects/RealEstate__c/fields/PenaltyUnit__c.field-meta.xml
<CustomField>
    <fullName>PenaltyUnit__c</fullName>
    <label>違約金単位</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>円</fullName>
            </value>
            <value>
                <fullName>百円</fullName>
            </value>
            <value>
                <fullName>千円</fullName>
            </value>
            <value>
                <fullName>万円</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>