force-app/main/default/objects/RealEstate__c/fields/PostSubmitDate__c.field-meta.xml
<CustomField>
    <fullName>PostSubmitDate__c</fullName>
    <label>SOからポスト提出日</label>
    <type>Date</type>
</CustomField>