force-app/main/default/objects/RealEstate__c/fields/PrimitiveContractStartDate__c.field-meta.xml
<CustomField>
    <fullName>PrimitiveContractStartDate__c</fullName>
    <label>原始契約開始日</label>
    <type>Date</type>
</CustomField>