force-app/main/default/objects/RealEstate__c/fields/RealEstateAlert__c.field-meta.xml
<CustomField>
    <fullName>RealEstateAlert__c</fullName>
    <label>物件アラート</label>
    <type>TextArea</type>
</CustomField>