force-app/main/default/objects/RealEstate__c/fields/RealEstateId__c.field-meta.xml
<CustomField>
    <fullName>RealEstateId__c</fullName>
    <externalId>true</externalId>
    <label>物件ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>