force-app/main/default/objects/RealEstate__c/fields/ReidentNameKana__c.field-meta.xml
<CustomField>
    <fullName>ReidentNameKana__c</fullName>
    <formula>ContractorName__r.Kana__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>入居者名カナ</label>
    <type>Text</type>
</CustomField>