force-app/main/default/objects/RealEstate__c/fields/RenewalAdministrativeFeeNum__c.field-meta.xml
<CustomField>
    <fullName>RenewalAdministrativeFeeNum__c</fullName>
    <label>更新事務手数料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>