force-app/main/default/objects/RealEstate__c/fields/RenewalFeeNum__c.field-meta.xml
<CustomField>
    <fullName>RenewalFeeNum__c</fullName>
    <label>更新料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>