force-app/main/default/objects/RealEstate__c/fields/RenewalRecordCreateDate__c.field-meta.xml
<CustomField>
    <fullName>RenewalRecordCreateDate__c</fullName>
    <label>更新レコード自動作成日</label>
    <type>Date</type>
</CustomField>