force-app/main/default/objects/RealEstate__c/fields/RentChange__c.field-meta.xml
<CustomField>
    <fullName>RentChange__c</fullName>
    <label>賃料変更</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>据置</fullName>
            </value>
            <value>
                <fullName>値上</fullName>
            </value>
            <value>
                <fullName>値下</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>