force-app/main/default/objects/RealEstate__c/fields/ResidenceArea__c.field-meta.xml
<CustomField>
    <fullName>ResidenceArea__c</fullName>
    <label>居住面積</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>