force-app/main/default/objects/RealEstate__c/fields/ResidentBelongsAccount__c.field-meta.xml
<CustomField>
    <fullName>ResidentBelongsAccount__c</fullName>
    <formula>ContractorName__r.AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>入居者所属企業</label>
    <type>Text</type>
</CustomField>