force-app/main/default/objects/RealEstate__c/fields/ResidentWorkLocationStandardValuation__c.field-meta.xml
<CustomField>
    <fullName>ResidentWorkLocationStandardValuation__c</fullName>
    <label>標準価額入居者勤務地</label>
    <length>255</length>
    <type>Text</type>
</CustomField>