force-app/main/default/objects/RealEstate__c/fields/ReturnScheduledDateCreatedByFirst__c.field-meta.xml
<CustomField>
    <fullName>ReturnScheduledDateCreatedByFirst__c</fullName>
    <label>返却予定日登録者_1回目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>