force-app/main/default/objects/RealEstate__c/fields/ReturnScheduledDateCreatedBySecond__c.field-meta.xml
<CustomField>
    <fullName>ReturnScheduledDateCreatedBySecond__c</fullName>
    <label>返却予定日登録者_2回目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>