force-app/main/default/objects/RealEstate__c/fields/ReturnScheduledDateCreatedByThird__c.field-meta.xml
<CustomField>
    <fullName>ReturnScheduledDateCreatedByThird__c</fullName>
    <label>返却予定日登録者_3回目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>