force-app/main/default/objects/RealEstate__c/fields/ReturnScheduledDateSecond__c.field-meta.xml
<CustomField>
    <fullName>ReturnScheduledDateSecond__c</fullName>
    <label>返却予定日_2回目</label>
    <type>Date</type>
</CustomField>