force-app/main/default/objects/RealEstate__c/fields/ReturnScheduledFrequencyWarningMessage__c.field-meta.xml
<CustomField>
    <fullName>ReturnScheduledFrequencyWarningMessage__c</fullName>
    <label>返却予定回数警告メッセージ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>