force-app/main/default/objects/RealEstate__c/fields/Roof__c.field-meta.xml
<CustomField>
    <fullName>Roof__c</fullName>
    <label>屋根</label>
    <length>255</length>
    <type>Text</type>
</CustomField>