force-app/main/default/objects/RealEstate__c/fields/SeasonVariableCost2__c.field-meta.xml
<CustomField>
    <fullName>SeasonVariableCost2__c</fullName>
    <label>季節変動費2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>