force-app/main/default/objects/RealEstate__c/fields/SeasonVariableCost3__c.field-meta.xml
<CustomField>
    <fullName>SeasonVariableCost3__c</fullName>
    <label>季節変動費3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>