force-app/main/default/objects/RealEstate__c/fields/SendingInstructionMatter313__c.field-meta.xml
<CustomField>
    <fullName>SendingInstructionMatter313__c</fullName>
    <label>発送指示事項313</label>
    <length>255</length>
    <type>Text</type>
</CustomField>