force-app/main/default/objects/RealEstate__c/fields/SpecialContract3__c.field-meta.xml
<CustomField>
    <fullName>SpecialContract3__c</fullName>
    <label>特約3</label>
    <type>TextArea</type>
</CustomField>