force-app/main/default/objects/RealEstate__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <label>住所_市区以降</label>
    <length>255</length>
    <type>Text</type>
</CustomField>