force-app/main/default/objects/RealEstate__c/fields/StreetKana__c.field-meta.xml
<CustomField>
    <fullName>StreetKana__c</fullName>
    <label>住所市区以降_フリガナ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>