force-app/main/default/objects/RealEstate__c/fields/TransactionType__c.field-meta.xml
<CustomField>
    <fullName>TransactionType__c</fullName>
    <label>取引形態</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>法人契約</fullName>
            </value>
            <value>
                <fullName>個人契約</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>