force-app/main/default/objects/RealEstate__c/fields/Vacancy__c.field-meta.xml
<CustomField>
    <fullName>Vacancy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>kuusitu</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RealEstateUserRelation3</relationshipName>
    <type>Lookup</type>
</CustomField>