force-app/main/default/objects/RealEstate__c/fields/WaterCompanyContact__c.field-meta.xml
<CustomField>
    <fullName>WaterCompanyContact__c</fullName>
    <label>水道連絡先</label>
    <length>255</length>
    <type>Text</type>
</CustomField>