force-app/main/default/objects/RealEstate__c/fields/WithFurnitureRealEstate__c.field-meta.xml
<CustomField>
    <fullName>WithFurnitureRealEstate__c</fullName>
    <label>家具付き物件</label>
    <length>255</length>
    <type>Text</type>
</CustomField>