force-app/main/default/objects/RealEstate__c/recordTypes/Garage.recordType-meta.xml
<RecordType>
    <fullName>Garage</fullName>
    <active>true</active>
    <label>車庫</label>
</RecordType>