force-app/main/default/objects/RealEstate__c/recordTypes/RealEstate.recordType-meta.xml
<RecordType>
    <fullName>RealEstate</fullName>
    <active>true</active>
    <label>物件</label>
</RecordType>