force-app/main/default/objects/RealEstate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Account__c</columns>
    <columns>ContractorName__c</columns>
    <columns>ManagementCompanyName__c</columns>
    <columns>Status__c</columns>
    <columns>ContractStartDate__c</columns>
    <columns>ContractEndDate__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>RenewalRecordCreateDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>