force-app/main/default/objects/RealEstate__c/listViews/ContractRealEstate.listView-meta.xml
<ListView>
    <fullName>ContractRealEstate</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ListViewEmployee__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>ContractorName__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>契約物件</label>
</ListView>