force-app/main/default/objects/RealEstate__c/listViews/ContractRealEstateManager.listView-meta.xml
<ListView>
    <fullName>ContractRealEstateManager</fullName>
    <columns>NAME</columns>
    <columns>ContractorName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ListViewManager__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>ContractorName__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>契約物件(企業担当者)</label>
</ListView>