force-app/main/default/objects/RealEstate__c/listViews/OwnedPropertyRealEstate.listView-meta.xml
<ListView>
    <fullName>OwnedPropertyRealEstate</fullName>
    <columns>NAME</columns>
    <columns>ContractorName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ListViewRealEstate__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>自社所有物件(不動産会社)</label>
</ListView>